Samo bez tekstovi

--- a/index.html
+++ b/index.html
@@ -30,22 +30,20 @@
 
     <div class="sadrzaj">
         <div class="tekst">
-            <p>
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec hendrerit rhoncus nisl sed egestas. In aliquet eleifend turpis, id interdum odio tincidunt sit amet. Aliquam et imperdiet leo. Phasellus at libero mi. Morbi egestas aliquet justo sed consequat. Sed sed viverra nisi. Integer volutpat magna eu rhoncus cursus. Mauris quis pretium quam. Donec venenatis, orci ut fringilla dignissim, magna magna posuere justo, eleifend ultrices enim ante sit amet neque. Praesent eget orci enim. Etiam sodales eleifend risus ut congue. Integer tincidunt massa ut scelerisque sodales. Cras viverra placerat dui vitae semper. Mauris non volutpat dui, ut hendrerit augue. Pellentesque ante elit, sodales sed mi eu, maximus porttitor nisi. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec hendrerit rhoncus nisl sed egestas. In aliquet eleifend turpis, id interdum odio tincidunt sit amet. Aliquam et imperdiet leo. Phasellus at libero mi. Morbi egestas aliquet justo sed consequat. Sed sed viverra nisi. Integer volutpat magna eu rhoncus cursus. Mauris quis pretium quam. Donec venenatis, orci ut fringilla dignissim, magna magna posuere justo, eleifend ultrices enim ante sit amet neque. Praesent eget orci enim. Etiam sodales eleifend risus ut congue. Integer tincidunt massa ut scelerisque sodales. Cras viverra placerat dui vitae semper. Mauris non volutpat dui, ut hendrerit augue. Pellentesque ante elit, sodales sed mi eu, maximus porttitor nisi.
-            </p>
+            <p id = "tekst"></p>
         </div>
-        <div class="slika slika1"></div>
+        <div class="slika slika1" id="s"></div>
         <div class="slike">
-            <div class="slicica slika1"></div>
-            <div class="slicica slika2"></div>
-            <div class="slicica slika3"></div>
-            <div class="slicica slika4"></div>
-            <div class="slicica slika5"></div>
-            <div class="slicica slika6"></div>
-            <div class="slicica slika7"></div>
-            <div class="slicica slika8"></div>
-            <div class="slicica slika9"></div>
-            <div class="slicica slika10"></div>
+            <div class="slicica slika1" id = "s1"></div>
+            <div class="slicica slika2" id = "s2"></div>
+            <div class="slicica slika3" id = "s3"></div>
+            <div class="slicica slika4" id = "s4"></div>
+            <div class="slicica slika5" id = "s5"></div>
+            <div class="slicica slika6" id = "s6"></div>
+            <div class="slicica slika7" id = "s7"></div>
+            <div class="slicica slika8" id = "s8"></div>
+            <div class="slicica slika9" id = "s9"></div>
+            <div class="slicica slika10" id = "s10"></div>
         </div>
     </div>
 
