--- a/stranice/Uputstvo/uputstvo.html
+++ b/stranice/Uputstvo/uputstvo.html
@@ -14,13 +14,13 @@
             <h1>Фото галерија</h1>
         </div>
         <div class="navbar">
-            <div class="navpolje trenutna" id="pocetna">
+            <div class="navpolje" id="pocetna">
                 <p>Почетна</p>
             </div>
             <div class="navpolje" id="autor">
                 <p>О аутору</p>
             </div>
-            <div class="navpolje" id="uputstvo">
+            <div class="navpolje trenutna" id="uputstvo">
                 <p>Упутство</p>
             </div>
             <div class="zavrsni">
@@ -30,22 +30,7 @@
     </header>
 
     <div class="sadrzaj">
-        <div class="tekst">
-            <p id = "tekst"></p>
-        </div>
-        <div class="slika slika1" id="s"></div>
-        <div class="slike">
-            <div class="slicica slika1" id = "s1"></div>
-            <div class="slicica slika2" id = "s2"></div>
-            <div class="slicica slika3" id = "s3"></div>
-            <div class="slicica slika4" id = "s4"></div>
-            <div class="slicica slika5" id = "s5"></div>
-            <div class="slicica slika6" id = "s6"></div>
-            <div class="slicica slika7" id = "s7"></div>
-            <div class="slicica slika8" id = "s8"></div>
-            <div class="slicica slika9" id = "s9"></div>
-            <div class="slicica slika10" id = "s10"></div>
-        </div>
+        
     </div>
 
 </body>
