--- a/stranice/OMeni/omeni.html
+++ b/stranice/OMeni/omeni.html
@@ -31,6 +31,15 @@
 
     <div class="sadrzaj">
         
+        <div class="slika">
+            <img src="/slike/ja.PNG" alt="Ja">
+        </div>
+        <div class="omeni">
+            <h1>Јован Костић</h1>
+            <p>Ученик Техничке Школе у Пироту <br> <a href="https://github.com/Jovan-K">Моји пројекти</a></p>
+            
+        </div>
+
     </div>
 
 </body>
