--- a/stranice/Uputstvo/uputstvo.html
+++ b/stranice/Uputstvo/uputstvo.html
@@ -30,7 +30,32 @@
     </header>
 
     <div class="sadrzaj">
-        
+        <p>
+            Креирати веб апликацију са називом <b>Фото галерија</b> која се састоји од три странице:
+            <br>
+            <b>Почетна</b>, <b>О аутору</b> и <b>Упутство</b>.
+            <br><br>
+            На страницу Почетна поставити контејнер за смештај галерије величине 640x640px. На
+            средину контејнера поставити централну фотографију величине 640x480px, а испод ње
+            распоредити десет малих фотографија величине 64x40px. Изнад централне фотографије
+            приказати текстуални опис фотофрафије који се чита из текстуалног фајла датог у прилогу
+            задатка. Описи су дати у следећем формату: за сваку слику унет је по један параграф који
+            садржи име фајла: опис слике
+            <br><br>
+            Фотографије се учитавају из посебног фолдера и произвољних су димензија, а урађене су у
+            ЈPG формату. Фотографије имају називе slika1.jpg, slika2.jpg, … до slika10.jpg.
+            <br><br>
+            На страници О аутору написати основне податке о аутору.
+            <br><br>
+            Веб апликација треба да има следећу фукционалност: Левим кликом миша на доњу (малу)
+            фотографију та фотографија се приказује на месту централне фотографије, а такође се
+            исписује њен опис изнад централне фотографије.
+            <br><br>
+            CSS код и код за функционалност издвојити у посебне екстерне датотеке, а учитати их у HTML
+            при стартовању апликације.
+            <br><br>
+            Готову апликацију поставити на Веб сервер инсталиран на локалном рачунару.
+        </p>
     </div>
 
 </body>
