--- a/stranice/OMeni/omeni.html
+++ b/stranice/OMeni/omeni.html
@@ -32,7 +32,7 @@
     <div class="sadrzaj">
         
         <div class="slika">
-            <img src="/slike/ja.PNG" alt="Ja">
+            <img src="./../../slike/ja.PNG" alt="Ja">
         </div>
         <div class="omeni">
             <h1>Јован Костић</h1>
